[Fix] fix the wrong name and body overflow-x

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,4 +12,5 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
